# shello

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package.json  tailwind.config.js
.github/workflows/: release.yml
docs/: homebrew-tap.md
src/: App.vue  fonts.ts  main.ts  style.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  lib.rs  main.rs  registry.rs  vault.rs
src-tauri/src/db/: custom_recipes.rs  mod.rs  profiles.rs  registry.rs  snippets.rs  tunnels.rs
src-tauri/src/db/migrations/: 001_profiles.sql  002_vault.sql  003_detected_os.sql  004_snippets.sql  005_registry_cache.sql  006_custom_recipes.sql  007_sync.sql  008_tunnels.sql
src-tauri/src/local/: mod.rs  session.rs
src-tauri/src/sftp/: mod.rs  types.rs
src-tauri/src/ssh/: client.rs  config_import.rs  keys.rs  mod.rs  pty.rs  session.rs  types.rs
src-tauri/src/tunnel/: mod.rs  socks5.rs
src/components/: AddServerModal.vue  GroupEditor.vue  HostKeyDialog.vue  ImportSshConfigDialog.vue  KeyManager.vue  LogoIcon.vue  LogoWordmark.vue  PaneContainer.vue  ProfileEditor.vue  RecipeRunner.vue  RecordingPreview.vue  ScreenshotPreview.vue  SectionHeader.vue  SettingsPage.vue  Sidebar.vue  SnippetsPanel.vue  TerminalLayout.vue  TerminalView.vue  TunnelsPanel.vue  UpdateToast.vue  VaultDialog.vue
src/lib/: os-icons.ts  recipe-types.ts  snippet-directory.ts  terminal-recording.ts  terminal-to-html.ts  themes.ts  use-profile-form.ts
src/stores/: profiles.ts  (+7 more)
(+3 files in other folders)
