[package]
name = "shello"
version = "0.1.13"
description = "Lightweight SSH client"
authors = ["Ari"]
edition = "2021"

[lib]
name = "shello_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
russh = "0.58"
tokio = { version = "1", features = ["full"] }
ulid = "1"
anyhow = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
log = "0.4"
async-trait = "0.1"
chrono = "0.4"
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
rand = "0.8"
keyring = "3"
base64 = "0.22"
dirs = "5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
urlencoding = "2"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-fs = "2.5.0"
russh-sftp = "2.3.0"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
portable-pty = "0.8"

